subiendo todo por que no toma la imagen en css

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
     border-top: dotted;
     border-left: dotted;
     border-right: dotted;
-
     display: flex;
     background: url("/AkumaxDDD.github.io/c5d6fd7e-7aaa-47ca-8fcd-68466f576eed.png") no-repeat;
     background-position:top;
@@ -34,6 +33,11 @@ body{
 .enredo{
     width: 100%;
     position: relative;
+    position: relative;
+    border-radius: 100%;
+    border-top: dotted;
+    border-left: dotted;
+    border-right: dotted;
 }
 /* .dark{
     position: relative;
