--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     width: 100%; 
     height: 650px;
     top: -30px;
+
 }
 
 .rulo{
@@ -29,6 +30,7 @@ body{
     align-items: self-end;
     width: 60%;
     height: 650px;
+    background-color: white;
 }
 .enredo{
     width: 100%;
