--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     display: block;
     justify-content: center;
-    background-color: rgb(142, 185, 241);
+
 }
 .top{
     position: relative;
@@ -182,5 +182,20 @@ body{
     top: 0;
     width: 100%;
     border: solid;
-    color: aliceblue;
+
+}
+.projects{
+    position: relative;
+    display:block;
+    justify-content: center;
+    text-align: center;
+}
+
+.imgdevbus{ 
+    left: 30%;
+    width: 40%;
+}
+
+.imgbtu{
+    width: 40%;
 }
