--- a/style.css
+++ b/style.css
@@ -1,3 +1,207 @@
+
+@media (min-width: 500px){
+    body{
+            display: block;
+            justify-content: center;
+        }
+
+    .top{
+        position: relative;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
+        width: 100%; 
+        height: 650px;
+        top: -30px;
+    
+    }
+    
+    .rulo{
+        position: relative;
+        border-radius: 100%;
+        border-top: dotted;
+        border-left: dotted;
+        border-right: dotted;
+        display: flex;
+        background: url("c5d6fd7e-7aaa-47ca-8fcd-68466f576eed.png") no-repeat;
+        background-position:top;
+        background-size: contain;
+        justify-content: center;
+        align-items: self-end;
+        width: 60%;
+        height: 650px;
+        background-color: white;
+    }
+    .enredo{
+        width: 100%;
+        position: relative;
+        position: relative;
+        border-radius: 100%;
+        border-top: dotted;
+        border-left: dotted;
+        border-right: dotted;
+    }
+    /* .dark{
+        position: relative;
+        top: 240px;
+        width: 800px;
+    } */
+    .divyo{
+    
+        position:absolute;
+        display: flex;
+        justify-content: center;
+        bottom: 10%;
+    }
+    .yo{
+    
+        position:relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+        border-radius: 20%;
+    
+    }
+    .txt{
+        bottom: 0;
+        position: relative;
+        display: block;
+        text-align: center;
+        width: 100%;
+    
+    }
+    .name{
+        position: relative;
+        color: rgb(0, 0, 0);
+        text-align: center;
+        margin: 0;
+        bottom: 0px;
+    }
+    .dev{
+        position: relative;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        margin-top: 0px;
+        margin-bottom: 0;
+        bottom: 0px;
+    }
+    
+    .aprendizaje1{
+        position:absolute;
+        z-index:10 ;
+        width: 15%;
+        transform: rotate(10deg);
+        top: 10%;
+        left: 25%;
+    }
+    .aprendizaje2{
+        position:absolute;
+        z-index:10 ;
+        width: 13%;
+        transform: rotate(-10deg);
+        top: 15%;
+        left: 60%;
+    }
+    .aprendizaje3{
+        position:absolute;
+        z-index:10 ;
+        width: 12%;
+        transform: rotate(10deg);
+        top: 30%;
+        left: 40%;
+    }
+    .aprendizaje4{
+        position:absolute;
+        z-index:10 ;
+        width:15%;
+        transform: rotate(-10deg);
+        top: 40%;
+        left: 60%;
+    }
+    .aprendizaje5{
+        position: absolute;
+        z-index:10 ;
+        width: 10%;
+        transform: rotate(-10deg);
+        top: 60%;
+        left: 70%;
+    }
+    .aprendizaje6{
+        position:absolute;
+        z-index:10 ;
+        width: 15%;
+        transform: rotate(10deg);
+        top: 60%;
+        left: 20%;
+    }
+    .aprendizaje7{
+        position:   absolute;
+        z-index:10 ;
+        width: 10%;
+        transform: rotate(-10deg);
+        top: 40%;
+        left: 15%;
+    
+    }
+    /* .muscle{
+        position: absolute;
+        width: 600px;
+        top: 560px;
+        z-index: -1;
+    } */
+    .my{
+        position: relative;
+        width: 80%;
+        display: block;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        border-top: solid;
+        background:linear-gradient(white,green);
+        left: 10%;
+    }
+    .about{
+        width: 100%;
+        position: relative;
+        top: 0px;
+        
+    }
+    .txtabout{
+        position: relative;
+        text-align: center;
+        width: 100%;
+        height: 220px;
+        top: 50px;
+    
+    }
+    .cv{
+        position: relative;
+        top: 0;
+        width: 100%;
+        border: solid;
+    
+    }
+    .projects{
+        position: relative;
+        display:block;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .imgdevbus{ 
+        left: 30%;
+        width: 40%;
+    }
+    
+    .imgbtu{
+        width: 40%;
+    }
+
+}
 body{
     display: block;
     justify-content: center;
@@ -9,7 +213,6 @@ body{
     justify-content: center;
     align-items: center;
     justify-items: center;
-    border: solid;
     width: 100%; 
     height: 650px;
     top: -30px;
@@ -162,6 +365,7 @@ body{
     border-top: solid;
     background:linear-gradient(white,green);
     left: 10%;
+    top: 20px;
 }
 .about{
     width: 100%;
@@ -181,7 +385,7 @@ body{
     position: relative;
     top: 0;
     width: 100%;
-    border: solid;
+
 
 }
 .projects{
@@ -198,4 +402,87 @@ body{
 
 .imgbtu{
     width: 40%;
+}
+@media (max-width: 500px){
+    .top{
+        position: relative;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
+        width: 100%; 
+        height: 650px;
+        top: 0px;
+    
+    }
+    .rulo{
+        position: relative;
+        border-radius: 40% 40% 0% 0%;
+
+        border-right: dotted;
+        display: flex;
+        background: url("c5d6fd7e-7aaa-47ca-8fcd-68466f576eed.png") no-repeat;
+        background-position:top;
+        background-size: contain;
+        justify-content: center;
+        align-items: self-end;
+        width: 60%;
+        height: 650px;
+        background-color: white;
+    }
+    .divyo{
+
+        position:absolute;
+        display: flex;
+        justify-content: center;
+        bottom: 30%;
+    }
+    .yo{
+    
+        position:relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 60%;
+        border-radius: 20%;
+    
+    }
+    .aprendizaje4{
+        position:absolute;
+        z-index:10 ;
+        width:15%;
+        transform: rotate(-10deg);
+        top: 35%;
+        left: 60%;
+    }
+    .aprendizaje5{
+        position: absolute;
+        z-index:10 ;
+        width: 10%;
+        transform: rotate(-10deg);
+        top: 25%;
+        left: 70%;
+    }
+    .aprendizaje6{
+        position:absolute;
+        z-index:10 ;
+        width: 15%;
+        transform: rotate(10deg);
+        top: 20%;
+        left: 20%;
+    }
+    .projects{
+        position: relative;
+        display:block;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .imgdevbus{ 
+        width: 100%;
+    }
+    
+    .imgbtu{
+        width: 100%;
+    }
 }
